# FromCampusToCareer

./: .env.example  .gitignore  main.py  pyproject.toml  worker.py
core/: config.py  database.py  dependencies.py  posting_id.py  security.py
docs/archive/: README.md
docs/plans/: ARCH-PLAN-MVP-2026-03-28-v2.md  PIPELINE-analytics_sdi.md  PIPELINE-ingestion.md  PIPELINE-normalization.md  README.md  REVIEW-SIGNOFF-MVP-2026-03-28.md  REVIEW-SIGNOFF-backend-docs-2026-04-07.md  REVIEW-SIGNOFF-ingestion-2026-03-29.md
docs/predevelopment/: agentic-coding-guide.md  architecture.md  initial-unified-dataset-and-scraping.md  intelligence-system-documentation.md  project.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
modules/analytics_sdi/: models.py  service.py
modules/auth/: exceptions.py  models.py  router.py  schemas.py  service.py
modules/gap_and_roadmap/: gap_service.py  models.py  roadmap_service.py  router.py  schemas.py
modules/ingestion/: loader.py  models.py  router.py  schemas.py
modules/normalization/: extractor.py  models.py  normalizer.py  pipeline.py  posting_id.py
modules/student_profile/: models.py  router.py  schemas.py  service.py
modules/taxonomy_admin/: models.py  router.py  (+3 more)
scripts/: check_state.py  historical_bootstrap.py  inspect_aliases.py  inspect_posting_skills.py  inspect_sdi.py  migrate_add_skills_col.py  reset_and_rerun.py
tests/: conftest.py  test_analytics_sdi.py  test_analytics_sdi_integration.py  test_auth.py  test_gap.py  test_ingestion.py  test_normalization.py  test_normalization_integration.py
(+9 files in other folders)
